load(
    ":test_macro.bzl",
    "go_macro_env_none_target",
    "go_macro_env_none_wiring_test",
    "go_macro_select_inputs_target",
    "go_macro_select_inputs_wiring_test",
    "go_macro_multi_service_target",
    "go_macro_multi_service_wiring_test",
    "go_macro_rundir_mismatch_target",
    "go_macro_rundir_mismatch_wiring_test",
    "go_macro_single_service_target",
    "go_macro_single_service_wiring_test",
    "resolve_topt_service_key_missing_failure_test",
    "resolve_topt_service_key_missing_target_rule",
    "resolve_topt_service_key_unknown_failure_test",
    "resolve_topt_service_key_unknown_target_rule",
)
load(
    ":test_selection_utils.bzl",
    "build_module_labels_invalid_entry_failure_test",
    "build_module_labels_invalid_entry_target_rule",
    "build_module_labels_empty_entry_failure_test",
    "build_module_labels_empty_entry_target_rule",
    "build_module_labels_invalid_shape_failure_test",
    "build_module_labels_invalid_shape_target_rule",
    "build_module_labels_unsanitized_entry_failure_test",
    "build_module_labels_unsanitized_entry_target_rule",
    "build_module_labels_valid_test",
    "go_stub_includes_manifest_in_files_test",
    "normalize_user_data_handles_none_test",
    "normalize_user_data_invalid_type_failure_test",
    "normalize_user_data_invalid_type_target_rule",
    "resolve_topt_service_key_prefers_exact_then_sanitized_test",
    "select_module_group_name_test",
    "service_mapping_entries_filters_non_service_test",
)
load(
    ":test_payloads_selector.bzl",
    "selector_embed_precedence_target",
    "selector_embed_precedence_test",
    "selector_deps_precedence_target",
    "selector_deps_precedence_test",
    "selector_explicit_precedence_target",
    "selector_explicit_precedence_test",
    "selector_empty_importpath_fallback_target",
    "selector_empty_importpath_fallback_test",
    "selector_fallback_target",
    "selector_fallback_test",
    "selector_include_disabled_target",
    "selector_include_disabled_test",
    "selector_no_match_fallback_target",
    "selector_no_match_fallback_test",
    "selector_explicit_miss_failure_target",
    "selector_explicit_miss_failure_test",
    "selector_override_miss_failure_target",
    "selector_override_miss_failure_test",
    "selector_override_target",
    "selector_override_test",
    "selector_payload_fixture_targets",
)

# Go-specific Starlark tests for orchestration selection and macro wiring.
service_mapping_entries_filters_non_service_test(
    name = "service_mapping_entries_filters_non_service_test",
    size = "small",
    timeout = "short",
)

resolve_topt_service_key_prefers_exact_then_sanitized_test(
    name = "resolve_topt_service_key_prefers_exact_then_sanitized_test",
    size = "small",
    timeout = "short",
)

select_module_group_name_test(
    name = "select_module_group_name_test",
    size = "small",
    timeout = "short",
)

normalize_user_data_handles_none_test(
    name = "normalize_user_data_handles_none_test",
    size = "small",
    timeout = "short",
)

normalize_user_data_invalid_type_target_rule(
    name = "normalize_user_data_invalid_type_target",
    tags = ["manual"],
)

normalize_user_data_invalid_type_failure_test(
    name = "normalize_user_data_invalid_type_failure_test",
    target_under_test = ":normalize_user_data_invalid_type_target",
)

build_module_labels_valid_test(
    name = "build_module_labels_valid_test",
    size = "small",
    timeout = "short",
)

go_stub_includes_manifest_in_files_test(
    name = "go_stub_includes_manifest_in_files_test",
    size = "small",
    timeout = "short",
)

selector_payload_fixture_targets()

selector_explicit_precedence_target(
    name = "selector_explicit_precedence_target",
    tags = ["manual"],
)

selector_explicit_precedence_test(
    name = "selector_explicit_precedence_test",
    target_under_test = ":selector_explicit_precedence_target",
)

selector_embed_precedence_target(
    name = "selector_embed_precedence_target",
    tags = ["manual"],
)

selector_embed_precedence_test(
    name = "selector_embed_precedence_test",
    target_under_test = ":selector_embed_precedence_target",
)

selector_deps_precedence_target(
    name = "selector_deps_precedence_target",
    tags = ["manual"],
)

selector_deps_precedence_test(
    name = "selector_deps_precedence_test",
    target_under_test = ":selector_deps_precedence_target",
)

selector_fallback_target(
    name = "selector_fallback_target",
    tags = ["manual"],
)

selector_fallback_test(
    name = "selector_fallback_test",
    target_under_test = ":selector_fallback_target",
)

selector_no_match_fallback_target(
    name = "selector_no_match_fallback_target",
    tags = ["manual"],
)

selector_no_match_fallback_test(
    name = "selector_no_match_fallback_test",
    target_under_test = ":selector_no_match_fallback_target",
)

selector_empty_importpath_fallback_target(
    name = "selector_empty_importpath_fallback_target",
    tags = ["manual"],
)

selector_empty_importpath_fallback_test(
    name = "selector_empty_importpath_fallback_test",
    target_under_test = ":selector_empty_importpath_fallback_target",
)

selector_include_disabled_target(
    name = "selector_include_disabled_target",
    tags = ["manual"],
)

selector_include_disabled_test(
    name = "selector_include_disabled_test",
    target_under_test = ":selector_include_disabled_target",
)

selector_override_target(
    name = "selector_override_target",
    tags = ["manual"],
)

selector_override_test(
    name = "selector_override_test",
    target_under_test = ":selector_override_target",
)

selector_explicit_miss_failure_target(
    name = "selector_explicit_miss_failure_target",
    tags = ["manual"],
)

selector_explicit_miss_failure_test(
    name = "selector_explicit_miss_failure_test",
    target_under_test = ":selector_explicit_miss_failure_target",
)

selector_override_miss_failure_target(
    name = "selector_override_miss_failure_target",
    tags = ["manual"],
)

selector_override_miss_failure_test(
    name = "selector_override_miss_failure_test",
    target_under_test = ":selector_override_miss_failure_target",
)

# Macro analysis tests use manual target-under-test labels to avoid running the
# synthetic capture targets directly. Only the analysistest wrappers belong in
# the suite below.
go_macro_single_service_target(
    name = "go_macro_single_service_target",
    tags = ["manual"],
)

go_macro_single_service_wiring_test(
    name = "go_macro_single_service_wiring_test",
    target_under_test = ":go_macro_single_service_target",
)

go_macro_multi_service_target(
    name = "go_macro_multi_service_target",
    tags = ["manual"],
)

go_macro_multi_service_wiring_test(
    name = "go_macro_multi_service_wiring_test",
    target_under_test = ":go_macro_multi_service_target",
)

go_macro_rundir_mismatch_target(
    name = "go_macro_rundir_mismatch_target",
    tags = ["manual"],
)

go_macro_rundir_mismatch_wiring_test(
    name = "go_macro_rundir_mismatch_wiring_test",
    target_under_test = ":go_macro_rundir_mismatch_target",
)

go_macro_env_none_target(
    name = "go_macro_env_none_target",
    tags = ["manual"],
)

go_macro_env_none_wiring_test(
    name = "go_macro_env_none_wiring_test",
    target_under_test = ":go_macro_env_none_target",
)

go_macro_select_inputs_target(
    name = "go_macro_select_inputs_target",
    tags = ["manual"],
)

go_macro_select_inputs_wiring_test(
    name = "go_macro_select_inputs_wiring_test",
    target_under_test = ":go_macro_select_inputs_target",
)

build_module_labels_invalid_shape_target_rule(
    name = "build_module_labels_invalid_shape_target",
    tags = ["manual"],
)

build_module_labels_invalid_shape_failure_test(
    name = "build_module_labels_invalid_shape_failure_test",
    target_under_test = ":build_module_labels_invalid_shape_target",
)

build_module_labels_invalid_entry_target_rule(
    name = "build_module_labels_invalid_entry_target",
    tags = ["manual"],
)

build_module_labels_invalid_entry_failure_test(
    name = "build_module_labels_invalid_entry_failure_test",
    target_under_test = ":build_module_labels_invalid_entry_target",
)

build_module_labels_empty_entry_target_rule(
    name = "build_module_labels_empty_entry_target",
    tags = ["manual"],
)

build_module_labels_empty_entry_failure_test(
    name = "build_module_labels_empty_entry_failure_test",
    target_under_test = ":build_module_labels_empty_entry_target",
)

build_module_labels_unsanitized_entry_target_rule(
    name = "build_module_labels_unsanitized_entry_target",
    tags = ["manual"],
)

build_module_labels_unsanitized_entry_failure_test(
    name = "build_module_labels_unsanitized_entry_failure_test",
    target_under_test = ":build_module_labels_unsanitized_entry_target",
)

resolve_topt_service_key_missing_target_rule(
    name = "resolve_topt_service_key_missing_target",
    tags = ["manual"],
)

resolve_topt_service_key_missing_failure_test(
    name = "resolve_topt_service_key_missing_failure_test",
    target_under_test = ":resolve_topt_service_key_missing_target",
)

resolve_topt_service_key_unknown_target_rule(
    name = "resolve_topt_service_key_unknown_target",
    tags = ["manual"],
)

resolve_topt_service_key_unknown_failure_test(
    name = "resolve_topt_service_key_unknown_failure_test",
    target_under_test = ":resolve_topt_service_key_unknown_target",
)

test_suite(
    name = "tests",
    tests = [
        ":service_mapping_entries_filters_non_service_test",
        ":resolve_topt_service_key_prefers_exact_then_sanitized_test",
        ":select_module_group_name_test",
        ":normalize_user_data_handles_none_test",
        ":normalize_user_data_invalid_type_failure_test",
        ":build_module_labels_valid_test",
        ":go_stub_includes_manifest_in_files_test",
        ":go_macro_single_service_wiring_test",
        ":go_macro_multi_service_wiring_test",
        ":go_macro_rundir_mismatch_wiring_test",
        ":go_macro_env_none_wiring_test",
        ":go_macro_select_inputs_wiring_test",
        ":build_module_labels_invalid_shape_failure_test",
        ":build_module_labels_invalid_entry_failure_test",
        ":build_module_labels_empty_entry_failure_test",
        ":build_module_labels_unsanitized_entry_failure_test",
        ":resolve_topt_service_key_missing_failure_test",
        ":resolve_topt_service_key_unknown_failure_test",
        ":selector_explicit_precedence_test",
        ":selector_embed_precedence_test",
        ":selector_deps_precedence_test",
        ":selector_fallback_test",
        ":selector_no_match_fallback_test",
        ":selector_empty_importpath_fallback_test",
        ":selector_include_disabled_test",
        ":selector_override_test",
        ":selector_explicit_miss_failure_test",
        ":selector_override_miss_failure_test",
    ],
)
